objects/pse__Forecast_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>pse__Actuals_Cutoff_Date__c</fullName>
        <description>Enter the number of days prior to the current date to use as the cutoff date for actual vs scheduled items.   Use 0 for today.   Leave blank for to automatically use  &quot;the end of last week&quot;</description>
        <inlineHelpText>Enter the number of days prior to the current date to use as the cutoff date for actual vs scheduled items.   Use 0 for today.   Leave blank for to automatically use  &quot;the end of last week&quot;</inlineHelpText>
        <label>Actuals Cutoff Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The number of records to process in a single batch. The value is 200 by default.</description>
        <inlineHelpText>The number of records to process in a single batch. The value is 200 by default.</inlineHelpText>
        <label>Forecast Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Category1_Label__c</fullName>
        <defaultValue>&quot;Worst Case&quot;</defaultValue>
        <inlineHelpText>The label assigned to the weighted forecast amount for Category 1.</inlineHelpText>
        <label>Category1 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Category2_Label__c</fullName>
        <defaultValue>&quot;Downside&quot;</defaultValue>
        <inlineHelpText>The label assigned to the weighted forecast amount for Category 2.</inlineHelpText>
        <label>Category2 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Category3_Label__c</fullName>
        <defaultValue>&quot;Commit&quot;</defaultValue>
        <inlineHelpText>The label assigned to the weighted forecast amount for Category 3.</inlineHelpText>
        <label>Category3 Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Default_Opportunity_Curve__c</fullName>
        <description>The forecast curve applied when there is no curve set on an opportunity. An error message is displayed if no curve is set on an opportunity and no default opportunity curve is defined.</description>
        <inlineHelpText>The forecast curve applied when there is no curve set on an opportunity. An error message is displayed if no curve is set on an opportunity and no default opportunity curve is defined.</inlineHelpText>
        <label>Default Opportunity Curve</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Default_Project_Curve__c</fullName>
        <description>The forecast curve applied when there is no curve set on a project. An error message is displayed if no curve is set on a project and no default project curve is defined.</description>
        <inlineHelpText>The forecast curve applied when there is no curve set on a project. An error message is displayed if no curve is set on a project and no default project curve is defined.</inlineHelpText>
        <label>Default Project Curve</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Maximum_Queue_Size__c</fullName>
        <label>Maximum Queue Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Forecast batch processes are sent via Chatter to recipients listed in the Notification Recipients setting. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Forecast batch processes are sent via Chatter to recipients listed in the Notification Recipients setting. This is deselected by default.</inlineHelpText>
        <label>Notifications by Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Forecast batch processes are sent via email to recipients listed in the Notification Recipients setting. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Forecast batch processes are sent via email to recipients listed in the Notification Recipients setting. This is deselected by default.</inlineHelpText>
        <label>Notifications by Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Recipients__c</fullName>
        <description>Specifies the notification recipients for Forecast batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;). This setting is null by default.</description>
        <inlineHelpText>Specifies the notification recipients for Forecast batch notifications sent via Chatter or email. The value is a list of email addresses separated by semicolons (;). This setting is null by default.</inlineHelpText>
        <label>Notification Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Notifications_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, notifications from Forecast batch processes are sent via tasks. This is deselected by default.</description>
        <inlineHelpText>If selected, notifications from Forecast batch processes are sent via tasks. This is deselected by default.</inlineHelpText>
        <label>Notifications by Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Category1_Calculation__c</fullName>
        <defaultValue>&quot;0.00&quot;</defaultValue>
        <inlineHelpText>The multipliers used to calculate Category 1 for Opportunity Forecasts.</inlineHelpText>
        <label>Opportunity Category1 Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Category2_Calculation__c</fullName>
        <defaultValue>&quot;0.00&quot;</defaultValue>
        <inlineHelpText>The multipliers used to calculate Category 2 for Opportunity Forecasts. For best practice, each multiplier should be higher than the previous Category value.</inlineHelpText>
        <label>Opportunity Category2 Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Category3_Calculation__c</fullName>
        <defaultValue>&quot;0.25&quot;</defaultValue>
        <inlineHelpText>The multipliers used to calculate Category 3 for Opportunity Forecasts. For best practice, each multiplier should be higher than the previous Category value.</inlineHelpText>
        <label>Opportunity Category3 Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Category1_Calculation__c</fullName>
        <defaultValue>&quot;1.00,0.00,0.00,0.00,0.00,0.00,0.00&quot;</defaultValue>
        <description>Multipliers used to calculate the Category1 default for Project Forecasts. Determines contribution of the following metrics (in order): Billings, Pass Through Billings, Scheduled Time, Held Resource Requests, Unheld Resource Requests, Scheduled Milestones, Unscheduled Backlog.</description>
        <inlineHelpText>The multipliers used to calculate Category 1 for Project Forecasts. This multiplies, in order, the metrics for:Billings, Pass Through Billings, Scheduled Time, Held Resource Requests, Unheld Resource Requests, Scheduled Milestones and Unscheduled Backlog.</inlineHelpText>
        <label>Project Category1 Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Category2_Calculation__c</fullName>
        <defaultValue>&quot;1.00,0.00,0.25,0.00,0.00,0.25,0.00&quot;</defaultValue>
        <description>Multipliers used to calculate the Category2 default for Project Forecasts. Determines contribution of the following metrics (in order): Billings, Pass Through Billings, Scheduled Time, Held Resource Requests, Unheld Resource Requests, Scheduled Milestones, Unscheduled Backlog.</description>
        <inlineHelpText>The multipliers used to calculate Category 2 for Project Forecasts. This multiplies, in order, the metrics for:Billings, Pass Through Billings, Scheduled Time, Held Resource Requests, Unheld Resource Requests, Scheduled Milestones and Unscheduled Backlog.</inlineHelpText>
        <label>Project Category2 Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Category3_Calculation__c</fullName>
        <defaultValue>&quot;1.00,0.00,0.50,0.25,0.00,0.50,0.50&quot;</defaultValue>
        <description>Multipliers used to calculate the Category3 default for Project Forecasts. Determines contribution of the following metrics (in order): Billings, Pass Through Billings, Scheduled Time, Held Resource Requests, Unheld Resource Requests, Scheduled Milestones, Unscheduled Backlog.</description>
        <inlineHelpText>The multipliers used to calculate Category 3 for Project Forecasts. This multiplies, in order, the metrics for:Billings, Pass Through Billings, Scheduled Time, Held Resource Requests, Unheld Resource Requests, Scheduled Milestones and Unscheduled Backlog.</inlineHelpText>
        <label>Project Category3 Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Use_Category1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to determine if Category 1 is included in the Forecast calculation.</inlineHelpText>
        <label>Use Category1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Category2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to determine if Category 2 is included in the Forecast calculation.</inlineHelpText>
        <label>Use Category2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Category3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to determine if Category 3 is included in the Forecast calculation.</inlineHelpText>
        <label>Use Category3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_Is_Services_Product_On_Opp_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, forecasting will utilize the &quot;Is Services Product&quot; field on the Opportunity Product record, otherwise it will utilize the field directly from the Product record</description>
        <label>Use Is Services Product On Opp Product</label>
        <type>Checkbox</type>
    </fields>
    <label>Deprecated: Forecast Settings</label>
</CustomObject>